--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,21 @@
-# Build stage
+# Use official Node.js image as base
 FROM node:18-alpine AS builder
+
+# Set working directory inside container
 WORKDIR /app
 
-# Install dependencies
+# Install Vite globally
 RUN npm install -g create-vite
+
+# Initialize a new Vite project
 RUN create-vite react-frontend --template react
+
+# Change directory to the new project
 WORKDIR /app/react-frontend
 
-# Install necessary packages
+# Install dependencies
 RUN npm install
-RUN npm install react-router-dom tailwindcss autoprefixer postcss @tailwindcss/postcss --save-dev
+RUN npm install react-router-dom tailwindcss autoprefixer postcss @tailwindcss/postcss --save-dev  # ✅ Fix: Install missing package
 
 # Copy source code and build
 COPY . .
