--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,9 +7,9 @@ WORKDIR /app
 # Copy package.json and package-lock.json first (to cache dependencies)
 COPY package.json package-lock.json ./
 
-# Install dependencies, including autoprefixer
+# Install dependencies, including Tailwind PostCSS plugin
 RUN npm install
-RUN npm install autoprefixer postcss --save-dev  
+RUN npm install @tailwindcss/postcss postcss autoprefixer tailwindcss --save-dev  
 
 # Copy all project files
 COPY . .
